Introduced IE specific CSS file for minor formatting love, especially on the home page and around the main title, just fixing up the spacing a little

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,6 +203,13 @@ article h1
 		margin:0;
 		margin-top:2px;
 	}
+	
+article h2
+	{
+		padding-bottom:10px;
+		border-bottom:1px solid #ccc;
+		margin-bottom:8px;
+	}
 
 	
 /** Content nav **/
